@@ -1,3 +1,8 @@
+2015-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/tif_read.c (TIFFStartTile): Fix Coverity 715973
+	"Division or modulo by zero".
+
 2015-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* libtiff/tif_dir.c (TIFFNumberOfDirectories): Quiet Coverity
